<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <EditText
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:id="@+id/editText"

            android:enabled="false"
            android:hint="@string/send_hint"
            android:layout_weight="2" />


        <Button
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/send"
            android:id="@+id/send"
            android:layout_weight="1" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_gravity="center">
        <Button
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:text="@string/up"
            android:id="@+id/up" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_gravity="center">

        <Button
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:text="@string/left"
            android:id="@+id/left"
            android:layout_weight="1"
            android:layout_margin="20dp"
            android:layout_gravity="center" />

        <Button
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:text="@string/right"
            android:id="@+id/right"
            android:layout_weight="1"
            android:layout_margin="20dp"
            android:layout_gravity="center" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_gravity="center">

        <Button
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:text="@string/down"
            android:id="@+id/down"
            android:layout_weight="1" />

    </LinearLayout>

</LinearLayout>
